<resources>
    <string name="app_name">Consortium</string>
    <string name="tinHint">Trader\'s name</string>
    <string name="UploadBtnText">Upload</string>
    <string name="LoadBtnText">Load</string>
    <string name="OpenBtnText">Open</string>
    <string name="logoDescription">logo</string>
    <string name="welcomeMessage">Welcome back, %s!</string>
    <string name="deliveryTitle">Delivery</string>
    <string name="zElement" translatable="false">Z</string>
    <string name="wuElement" translatable="false">Wu</string>
    <string name="jaElement" translatable="false">Ja</string>
    <string name="iElement" translatable="false">I</string>
    <string name="bElement" translatable="false">B</string>
    <string name="emptyTraderNameError">Trader\'s name can\'t be empty</string>
    <string name="deliveryUploadedMessage">Deliveries uploaded</string>
    <string name="deliveryCreation">Delivery created!</string>
    <string name="emptyDeliveryError">Delivery can\'t be empty</string>
</resources>